# fastcdc-rs2hs

./: .gitignore  .gitmodules  Cargo.toml  README.md  cabal.project  flake.nix
fastcdc-hs/: Setup.lhs  fastcdc-hs.cabal
fastcdc-hs-conduit/: CHANGELOG.md  LICENSE  fastcdc-hs-conduit.cabal
fastcdc-hs-conduit/fastcdc-conduit/: Main.hs
fastcdc-hs-conduit/src/Data/Conduit/FastCDC/: V2020.hs
fastcdc-hs-ffi/: .gitignore  Cargo.toml  fastcdc-hs-ffi.cabal  hsbindgen.toml
fastcdc-hs-ffi/src/: FastCdcRs.hs  lib.rs
fastcdc-hs/bench/: Main.hs
fastcdc-hs/fastcdc/: Main.hs
fastcdc-hs/src/: FastCdcRs.hs
fastcdc-hs/src/FastCDC/: V2020.hs
fastcdc-hs/src/FastCDC/V2020/: FFI.hs
fastcdc-rs-ffi/: Cargo.toml  cbindgen.toml
fastcdc-rs-ffi/src/: lib.rs
test/: test.cabal
test/app/: Main.hs
