cabal-version:      3.4
name:               fastcdc-hs-conduit
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sander
maintainer:         hey@sandydoo.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Conduit.FastCDC.V2020
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , bytestring
                    , conduit
                    , fastcdc-hs
    hs-source-dirs:   src
    default-language: GHC2021
