cabal-version:      3.4
name:               fastcdc-hs-conduit
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sander
maintainer:         hey@sandydoo.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Conduit.FastCDC.V2020
    build-depends:    async
                    , base <5
                    , bytestring
                    , directory
                    , mtl
                    , conduit
                    , fastcdc-hs
                    , unliftio
    hs-source-dirs:   src
    default-language: GHC2021

executable fastcdc-conduit
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, bytestring, conduit, directory, fastcdc-hs, fastcdc-hs-conduit
    hs-source-dirs:   fastcdc-conduit
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

