cabal-version:      2.4
name:               fastcdc-hs
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and
-- patches.
-- maintainer:
extra-source-files: bench/SekienAkashita.jpg

build-type:         Simple


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FastCDC.V2020
    other-modules:    FastCDC.V2020.FFI
    default-extensions: DerivingStrategies, NamedFieldPuns
    build-depends:    base, bytestring, resourcet, transformers, unliftio-core
    hs-source-dirs:   src
    default-language: Haskell2010
    pkgconfig-depends: fastcdc_rs_ffi

executable fastcdc
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, fastcdc-hs, bytestring, resourcet
    hs-source-dirs:   fastcdc
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

benchmark fastcdc-bench
    import:           warnings
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:    base, deepseq, fastcdc-hs, criterion, bytestring
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
